update webpack config

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>integral-mall</title>
-  </head>
-  <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
+    <link rel="stylesheet" href="./dist/style.css">
+</head>
+
+<body>
     <app></app>
-    <script src="dist/build.js"></script>
-  </body>
+    <script src="./dist/build.js"></script>
+</body>
+
 </html>
