--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='zh-CN'>
 
 <head>
-    <meta charset="utf-8">
-    <title>积分商城</title>
+    <meta charset='utf-8'>
+    <title>坚果互动</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 </head>
 
 <body>
-    <app id="app"></app>
-    <script src="./dist/build.js"></script>
+    <app id='app'></app>
+    <script id='build' src='./dist/build.js'> </script>
 </body>
 
 </html>
