vuex全局属性设置

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <app id='app'></app>
-    <script id='build' src='./dist/build.js'> </script>
+    <script id='build' src='./dist/build.js?version=1.31'> </script>
 </body>
 
 </html>
