--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset='utf-8'>
-    <title>坚果互动</title>
+    <title>天天抢红包</title>
     <meta name="viewport">
 </head>
 
 <body>
     <app id='app'></app>
-    <script  src='./dist/vendors.js?version=1.03'> </script>
-    <script  src='./dist/app.js?version=1.03'> </script>
+    <script  src='./dist/vendors.js?version=1.22'> </script>
+    <script  src='./dist/app.js?version=1.22'> </script>
 </body>
 
 </html>
