优惠券复制问题

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset='utf-8'>
-    <title>天天抢红包</title>
+    <title>积分兑换</title>
     <meta name="viewport">
+    <meta content='telephone=no' name='format-detection'>
 </head>
 
 <body>
     <app id='app'></app>
-    <script  src='./dist/vendors.js?version=1.27'> </script>
-    <script  src='./dist/app.js?version=1.27'> </script>
+    <script  src='./dist/vendors.js?version=1.29'> </script>
+    <script  src='./dist/app.js?version=1.29'> </script>
 </body>
 
 </html>
