--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
-</body>
+    <script  src='./dist/vendors.js?version=1.10'> </script>
+    <script  src='./dist/app.js?version=1.10'> </script></body>
 
 </html>
