--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
     <div id="app"></div>
-    <script  src='./dist/vendor.js?version=1.12'> </script>
-    <script  src='./dist/app.js?version=1.12'> </script></body>
+    <script src='./dist/vendor.js?v=1.17'>
+    </script>
+    <script src='./dist/app.js?v=1.17'>
+    </script>
+</body>
 
 </html>
