--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
     <meta charset="utf-8">
     <meta name="viewport">
     <title>积分兑换</title>
+<!--     <style type="text/css">
+    #loading {
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        display: none;
+        font-size: 0.5rem;
+        font-weight: normal;
+    }
+
+    </style> -->
 </head>
 
 <body>
     <div id="app"></div>
-    <script src='./dist/vendor.js?v=1.17'>
+<!--    
+    <script type="text/javascript">
+    var scale = 1 / devicePixelRatio;
+    document.querySelector('meta[name="viewport"]').setAttribute('content', 'width=device-width,initial-scale='+scale+', maximum-scale='+scale+' , minimum-scale='+scale+' , minimal-ui,user-scalable=0');
+    document.documentElement.style.fontSize = document.documentElement.clientWidth / 10 + 'px';
+
+
+    var loading = document.getElementById('loading');
+    loading.style.display='block';
+    window.onload = function() {
+        loading.style.display = 'none';
+    }
+    </script>
+ -->    <script src='./dist/vendor.js?v=1.17'>
     </script>
     <script src='./dist/app.js?v=1.17'>
     </script>
