--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport">
     <title>积分兑换</title>
+    <link rel="stylesheet" href="./dist/style.css">
 </head>
 
 <body>
     <div id="app"></div>
-   <script src='./dist/vendor.js?v=1.27'>
+   <script src='./dist/vendor.js?v=1.28'>
     </script>
-    <script src='./dist/app.js?v=1.27'>
+    <script src='./dist/app.js?v=1.28'>
     </script>
 </body>
 
