--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport">
+    <meta name = "format-detection" content = "telephone=no">
     <title>积分兑换</title>
     <link rel="stylesheet" href="./dist/style.css">
 </head>
 
 <body>
     <div id="app"></div>
-   <script src='./dist/vendor.js?v=1.29'>
+   <script src='./dist/vendor.js?v=1.31'>
     </script>
-    <script src='./dist/app.js?v=1.29'>
+    <script src='./dist/app.js?v=1.31'>
     </script>
 </body>
 
