--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport">
-    <meta name = "format-detection" content = "telephone=no">
-    <title>积分兑换</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1 , minimum-scale=1,  minimal-ui,user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <title></title>
     <link rel="stylesheet" href="./dist/style.css">
 </head>
 
 <body>
     <div id="app"></div>
-   <script src='./dist/vendor.js?v=1.31'>
+    <script src='./dist/vendor.js?v=1.32'>
     </script>
-    <script src='./dist/app.js?v=1.31'>
+    <script src='./dist/app.js?v=1.32'>
     </script>
 </body>
 
