--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1 , minimum-scale=1,  minimal-ui,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <title></title>
-    <link rel="stylesheet" href="./dist/style.css?v=1.47">
+    <link rel="stylesheet" href="./dist/style.css?v=1.51">
 </head>
 
 <body>
     <div id="app"></div>
-    <script src='./dist/vendor.js?v=1.47'>
+    <script src='./dist/vendor.js?v=1.51'>
     </script>
-    <script src='./dist/app.js?v=1.47'>
+    <script src='./dist/app.js?v=1.51'>
     </script>
     <script src='http://st.gwold.com/yineng/game.min.js'></script>
+    <script>
+      var before=new Date();
+      window.addEventListener('load',function(){
+
+        var later=new Date();
+        alert((later-before)/1000);
+      })
+    </script>
 </body>
 
 </html>
