--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <title></title>
     <link rel="stylesheet" href="./dist/style.css?v=1.30">
 </head>
-
 <body>
     <div id="app"></div>
-    <script src='./dist/vendor.js?v=1.30'>
-    </script>
-    <script src='./dist/app.js?v=1.30'>
-    </script>
+    <script src='./dist/vendor.js?v=1.30'></script>
+    <script src='./dist/app.js?v=1.30'></script>
     <script src='http://m.goldmiao.com/yngame/3x.min.js'></script>
 </body>
-
 </html>
