--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1 , minimum-scale=1,  minimal-ui,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <title></title>
-    <link rel="stylesheet" href="./dist/style.css?v=1.3333333333333333333333333333333">
+    <link rel="stylesheet" href="./dist/style.css?v=1.40">
 </head>
+
 <body>
     <div id="app"></div>
-    <script src='./dist/vendor.js?v=1.3333333333333333333333333333333'></script>
-    <script src='./dist/app.js?v=1.3333333333333333333333333333333'></script>
+    <script src='./dist/vendor.js?v=1.40'></script>
+    <script src='./dist/app.js?v=1.40'></script>
 </body>
+
 </html>
