--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1 , minimum-scale=1,  minimal-ui,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <title></title>
-    <link rel="stylesheet" href="./dist/style.css?v=1.2333333333333333333333333333333333">
+    <link rel="stylesheet" href="./dist/style.css?v=1.201">
 </head>
 
 <body>
     <div id="app"></div>
-    <script src='./dist/vendor.js?v=1.2333333333333333333333333333333333'></script>
-    <script src='./dist/app.js?v=1.2333333333333333333333333333333333'></script>
+    <script src='./dist/vendor.js?v=1.201'></script>
+    <script src='./dist/app.js?v=1.201'></script>
 </body>
 
 </html>
