--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <title></title>
     <link rel="stylesheet" href="./dist/style.css?v=1.208">
+    <link href="https://cdn.bootcss.com/Swiper/3.4.1/css/swiper.min.css" rel="stylesheet">
 </head>
 
 <body>
