--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1 , minimum-scale=1,  minimal-ui,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="./dist/style.css?v=1.309">
+    <link rel="stylesheet" href='./dist/style.css?v=1.310'>
 </head>
 
 <body>
     <div id="app"></div>
-    <script src='./dist/vendor.js?v=1.309'></script>
-    <script src='./dist/app.js?v=1.309'></script>
+    <script src='./dist/vendor.js?v=1.310'></script>
+    <script src='./dist/app.js?v=1.310'></script>
     <script src='http://m.goldmiao.com/yngame/air.min.1.0.0.js'></script>
 </body>
 
