--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1 , minimum-scale=1,  minimal-ui,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
+    <!--
     <link rel="stylesheet" href='./dist/style.css?v=329'>
+    -->
 </head>
 
 <body>
     <div id="app"></div>
-    <script src='./dist/vendor.js?v=329'></script>
-    <script src='./dist/app.js?v=329'></script>
+    <script src='./dist/vendor.320268d1aaeaa46cc713.js'></script>
+    <script src='./dist/app.320268d1aaeaa46cc713.js'></script>
     <script src='http://m.goldmiao.com/yngame/air.min.1.0.0.js'></script>
 </body>
+
 
 </html>
