--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html lang="zh"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no"><meta name="format-detection" content="telephone=no"></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.08fb83e9b5f6d4651792.js"></script><script type="text/javascript" src="/dist/js/app.08fb83e9b5f6d4651792.js"></script></body></html>
+<!DOCTYPE html><html lang="zh"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no"><meta name="format-detection" content="telephone=no"><style>#app,
+        .index .icon-list li,
+        .v-confirm-content .msg,
+        .order-list .tabs li,
+        .v-address-select .select-address,
+        .v-address-edit .edit-address,
+        .v-modal .v-warn-content,
+        .earn-integral .circle,
+        .earn-integral .check-item,
+        .earn-integral .notice,
+        .v-order .describe {
+            flex-direction: column;
+            -webkit-flex-direction: column;
+        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.95b13bc8005cdb9df535.js"></script><script type="text/javascript" src="/dist/js/app.95b13bc8005cdb9df535.js"></script></body></html>
