专题副标题 积分任务提示语 我的账户文字居中

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         .earn-integral .circle,
         .earn-integral .check-item,
         .earn-integral .notice,
-        .v-order .describe {
+        .v-order .describe,
+        .my-account .header .message {
             flex-direction: column;
             -webkit-flex-direction: column;
-        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.3dd0adb0abd1c61d7214.js"></script><script type="text/javascript" src="/dist/js/app.3dd0adb0abd1c61d7214.js"></script></body></html>
+        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.be365e0a2becc9244752.js"></script><script type="text/javascript" src="/dist/js/app.be365e0a2becc9244752.js"></script></body></html>
