--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .earn-integral .check-item,
         .earn-integral .notice,
         .v-order .describe,
-        .my-account .header .message {
+        .my-account .header{
             flex-direction: column;
             -webkit-flex-direction: column;
-        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.5890355363e1626fc5da.js"></script><script type="text/javascript" src="/dist/js/app.5890355363e1626fc5da.js"></script></body></html>
+        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.ddd025ed23ba9dd1957b.js"></script><script type="text/javascript" src="/dist/js/app.ddd025ed23ba9dd1957b.js"></script></body></html>
