--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         .v-address-select .select-address,
         .v-address-edit .edit-address,
         .v-modal .v-warn-content,
-        .earn-integral .circle,
+        .earn-integral .circle-button .circle,
         .earn-integral .check-item,
         .earn-integral .notice,
         .v-order .describe,
-        .my-account .header{
+        .v-warn-content,
+        .my-account .header {
             flex-direction: column;
             -webkit-flex-direction: column;
-        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.ddd025ed23ba9dd1957b.js"></script><script type="text/javascript" src="/dist/js/app.ddd025ed23ba9dd1957b.js"></script></body></html>
+        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.335012594f2d01514f91.js"></script><script type="text/javascript" src="/dist/js/app.335012594f2d01514f91.js"></script></body></html>
