--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
         .my-account .header {
             flex-direction: column;
             -webkit-flex-direction: column;
-        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.69eaad6b9898a1193bc8.js"></script><script type="text/javascript" src="/dist/js/app.69eaad6b9898a1193bc8.js"></script></body></html>
+        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.js"></script><script type="text/javascript" src="/dist/js/app.js"></script></body></html>
