--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@
         .product-detail .title {
             flex-direction: column;
             -webkit-flex-direction: column;
-        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.d3a90c9b90abafacf892.js"></script><script type="text/javascript" src="/dist/js/app.d3a90c9b90abafacf892.js"></script></body></html>
+        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.js"></script><script type="text/javascript" src="/dist/js/app.js"></script></body></html>
