--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         .v-order .describe,
         .v-warn-content,
         .my-account .header,
-        .product-detail .title {
+        .product-detail .title,
+        .v-treasure .integral-message {
             flex-direction: column;
             -webkit-flex-direction: column;
-        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.js"></script><script type="text/javascript" src="/dist/js/app.js"></script></body></html>
+        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.eb7c836d9608af49b5d2.js"></script><script type="text/javascript" src="/dist/js/app.eb7c836d9608af49b5d2.js"></script></body></html>
