--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="zh"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no"><meta name="format-detection" content="telephone=no"><style>#app,
         .index .icon-list li,
+        .subject .right,
         .v-confirm-content .msg,
         .order-list .tabs li,
         .v-address-select .select-address,
@@ -15,4 +16,4 @@
         .v-treasure .integral-message {
             flex-direction: column;
             -webkit-flex-direction: column;
-        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.8566c82ea0137cc8b6e2.js"></script><script type="text/javascript" src="/dist/js/app.8566c82ea0137cc8b6e2.js"></script></body></html>
+        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.aefbac8694a08655f1c3.js"></script><script type="text/javascript" src="/dist/js/app.aefbac8694a08655f1c3.js"></script></body></html>
