--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
         .v-treasure .integral-message {
             flex-direction: column;
             -webkit-flex-direction: column;
-        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.2f9e85246966d5f91b1a.js"></script><script type="text/javascript" src="/dist/js/app.2f9e85246966d5f91b1a.js"></script></body></html>
+        }</style></head><body><div id="app"></div><script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script><script type="text/javascript" src="/dist/js/vendor.js"></script><script type="text/javascript" src="/dist/js/app.js"></script></body></html>
