--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/dist/js/vendor.b97fbc326341de137bcd.js?v=2.0.1"></script>
-    <script type="text/javascript" src="/dist/js/basic.b97fbc326341de137bcd.js?v=2.0.1"></script>
-    <script type="text/javascript" src="/dist/js/app.b97fbc326341de137bcd.js?v=2.0.1"></script>
+    <script type="text/javascript" src="/dist/js/vendor.07fe2426b7d9fc3f30d3.js?version=2.0.1"></script>
+    <script type="text/javascript" src="/dist/js/basic.07fe2426b7d9fc3f30d3.js?version=2.0.1"></script>
+    <script type="text/javascript" src="/dist/js/app.07fe2426b7d9fc3f30d3.js?version=2.0.1"></script>
 </body>
 
 </html>
