--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html lang="zh"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no"><meta name="format-detection" content="telephone=no"><link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css"></head><body><div id="app"></div><script type="text/javascript" src="/dist/js/vendor.js?ba074e2b5aa5e00c2281"></script><script type="text/javascript" src="/dist/js/basic.js?ba074e2b5aa5e00c2281"></script><script type="text/javascript" src="/dist/js/app.js?ba074e2b5aa5e00c2281"></script></body></html>
+<!DOCTYPE html>
+<html lang="zh">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css">
+</head>
+
+<body>
+    <div id="app"></div>
+    <script type="text/javascript" src="/dist/js/vendor.js?1da84505e30be05a5daf"></script>
+    <script type="text/javascript" src="/dist/js/basic.js?1da84505e30be05a5daf"></script>
+    <script type="text/javascript" src="/dist/js/app.js?1da84505e30be05a5daf"></script>
+</body>
+
+</html>
