--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html lang="zh"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no"><meta name="format-detection" content="telephone=no"><link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css"></head><body><div id="app"></div><script type="text/javascript" src="/dist/js/vendor.js?1c45f42dc991fddef5cb"></script><script type="text/javascript" src="/dist/js/basic.js?1c45f42dc991fddef5cb"></script><script type="text/javascript" src="/dist/js/app.js?1c45f42dc991fddef5cb"></script></body></html>
+<!DOCTYPE html>
+<html lang="zh">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css">
+</head>
+
+<body>
+    <div id="app"></div>
+    <script type="text/javascript" src="/dist/js/vendor.js?0b42f9db8990a72a5c74"></script>
+    <script type="text/javascript" src="/dist/js/basic.js?0b42f9db8990a72a5c74"></script>
+    <script type="text/javascript" src="/dist/js/app.js?0b42f9db8990a72a5c74"></script>
+</body>
+
+</html>
