--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no">
-    <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css">
-</head>
-
-<body>
-    <div id="app"></div>
-    <script type="text/javascript" src="/dist/js/vendor.js?e6abb6a934ae09448310"></script>
-    <script type="text/javascript" src="/dist/js/basic.js?e6abb6a934ae09448310"></script>
-    <script type="text/javascript" src="/dist/js/app.js?e6abb6a934ae09448310"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="zh"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no"><meta name="format-detection" content="telephone=no"><link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css"></head><body><div id="app"></div><script type="text/javascript" src="/dist/js/vendor.js?dea28a55b61f8bc02fe3"></script><script type="text/javascript" src="/dist/js/basic.js?dea28a55b61f8bc02fe3"></script><script type="text/javascript" src="/dist/js/app.js?dea28a55b61f8bc02fe3"></script></body></html>
