--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css">
-</head>
-
-<body>
-    <div id="app"></div>
-    <script type="text/javascript" src="/dist/js/vendor.js?2bd093da0a980c7856b1"></script>
-    <script type="text/javascript" src="/dist/js/basic.js?2bd093da0a980c7856b1"></script>
-    <script type="text/javascript" src="/dist/js/app.js?2bd093da0a980c7856b1"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="zh"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no"><link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css"></head><body><div id="app"></div><script type="text/javascript" src="/dist/js/vendor.js?927aaae60f21bf122707"></script><script type="text/javascript" src="/dist/js/basic.js?927aaae60f21bf122707"></script><script type="text/javascript" src="/dist/js/app.js?927aaae60f21bf122707"></script></body></html>
