--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html lang="zh"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no"><link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css"></head><body><div id="app"></div><script type="text/javascript" src="/dist/js/vendor.js?f0d4d27589cfcdb5c61b"></script><script type="text/javascript" src="/dist/js/basic.js?f0d4d27589cfcdb5c61b"></script><script type="text/javascript" src="/dist/js/app.js?f0d4d27589cfcdb5c61b"></script></body></html>
+<!DOCTYPE html>
+<html lang="zh">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css">
+</head>
+
+<body>
+    <div id="app"></div>
+    <script type="text/javascript" src="/dist/js/vendor.js?a72417f94141dcf6fbb9"></script>
+    <script type="text/javascript" src="/dist/js/basic.js?a72417f94141dcf6fbb9"></script>
+    <script type="text/javascript" src="/dist/js/app.js?a72417f94141dcf6fbb9"></script>
+</body>
+
+</html>
