--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no">
+    
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css">
 </head>
-
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/dist/js/vendor.js?bd36fed6efd20db610ab"></script>
-    <script type="text/javascript" src="/dist/js/basic.js?bd36fed6efd20db610ab"></script>
-    <script type="text/javascript" src="/dist/js/app.js?bd36fed6efd20db610ab"></script>
-</body>
+<script type="text/javascript" src="/dist/js/vendor.js?f7413f5f91a6c5fdeec1"></script><script type="text/javascript" src="/dist/js/basic.js?f7413f5f91a6c5fdeec1"></script><script type="text/javascript" src="/dist/js/app.js?f7413f5f91a6c5fdeec1"></script></body>
 
 </html>
