--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no">
-    
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css">
-</head>
-<body>
-    <div id="app"></div>
-<script type="text/javascript" src="/dist/js/vendor.js?c7acc1c9725b03689610"></script><script type="text/javascript" src="/dist/js/basic.js?c7acc1c9725b03689610"></script><script type="text/javascript" src="/dist/js/app.js?c7acc1c9725b03689610"></script></body>
-
-</html>
+<!DOCTYPE html><html lang="zh"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no"><link rel="stylesheet" href="http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css"></head><body><div id="app"></div><script type="text/javascript" src="/dist/js/vendor.js?645cf5f61778e4662e2e"></script><script type="text/javascript" src="/dist/js/basic.js?645cf5f61778e4662e2e"></script><script type="text/javascript" src="/dist/js/app.js?645cf5f61778e4662e2e"></script></body></html>
